EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==11/22/2008
Trevius/AndMetal: Corrected the output of #showstats to provide accurate Attack Rating calculations.
Derision: Initialise animation to zero in the Mob constructor to prevent players sometimes appearing to run off when they first spawn.
Derision: /buyer /barter fix.

==11/20/2008
Derision: Implemented /buyer (cash compensation only) and /barter. Update your patch_Titanium.conf from the utils directory.

REQUIRED SQL:

DROP TABLE IF EXISTS `buyer`;
CREATE TABLE `buyer` (
  `charid` int(11) NOT NULL,
  `buyslot` int(11) NOT NULL,
  `itemid` int(11) NOT NULL,
  `itemname` varchar(65) NOT NULL,
  `quantity` int(11) NOT NULL,
  `price` int(11) NOT NULL,
  PRIMARY KEY  (`charid`,`buyslot`)
) ENGINE=MyISAM DEFAULT CHARSET=utf8;

ALTER TABLE `trader_audit` ADD `trantype` TINYINT NOT NULL DEFAULT '0';


==11/20/2008
cavedude00: (aza77) Added quest::collectitems.
cavedude00: (Rocker8956) Zones with IDs higher than 255 can now be instanced.

==11/19/2008
seveianrex: (Varkalas) WAR Sturdiness AA Fix
AndMetal: zone-*.log files on Linux will allow read access to group members. You may need to erase any existing logs to see the change.
AndMetal: Added some logging for spell crits (SPELLS__CRITS)

==11/18/2008
Derision: Bazaar: Added support for changing prices without ending Trader mode.

==11/16/2008
Derision: Added command 'undyeme' to restore all a player's armor slots to their natural undyed state.
Trevius: (Denivia) Changed Expansive Mind AA so that it raises the Worn Mana Regen Cap (as it should) instead of just increasing mana regen.
Derision: Bazaar bug fix relating to items with -1 max charges.

Optional SQL:

INSERT INTO commands (command, access, description) VALUES ('undyeme', 0, 'Remove dye from all of your armor slots');

==11/15/2008
seveianrex: Implemented AA use of SE_Accuracy (Ranger GoD AA "Precision of the Pathfinder" will have an effect now)