@@ -1,0 +1,2 @@
+Insert into rule_values values (0, 'World:AccountSessionLimit', -1);
+Insert into rule_values values (0, 'World:ExemptAccountLimitStatus', -1);
